--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "test-rest-api",
   "version": "1.0.0",
   "description": "This is a test project to learn how to build a rest api",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
   "author": "Deep",
+  "main": "main.js",
+  "scripts": {
+    "test": "mocha",
+    "start": "node main.js"
+  },
   "license": "ISC",
   "dependencies": {
+    "express": "^4.13.4",
     "mocha": "^2.4.5"
   }
 }
